--- a/platforma_dlya_naima/app/templates/candidate/after_upload.html
+++ b/platforma_dlya_naima/app/templates/candidate/after_upload.html
@@ -17,7 +17,7 @@
         }
     </style>
 
-    <title>SberКарьера</title>
+    <title>GigaКарьера</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}" />
@@ -38,7 +38,7 @@
                 <a class="navbar-brand" href="..">
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" />
                     <span>
-                SberКарьера
+                GigaКарьера
               </span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -154,7 +154,7 @@
                 <div class="info_logo">
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" />
                     <span>
-              SberКарьера
+              GigaКарьера
             </span>
                 </div>
             </div>
