--- a/platforma_dlya_naima/app/templates/candidate/candidate.html
+++ b/platforma_dlya_naima/app/templates/candidate/candidate.html
@@ -12,7 +12,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>SberКарьера</title>
+    <title>GigaКарьера</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}" />
@@ -33,7 +33,7 @@
             <a class="navbar-brand" href="..">
               <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" />
               <span>
-                SberКарьера
+                GigaКарьера
               </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -177,7 +177,7 @@
           <div class="info_logo">
             <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" />
             <span>
-              SberКарьера
+              GigaКарьера
             </span>
           </div>
         </div>
