--- a/platforma_dlya_naima/app/templates/candidate/recommendations.html
+++ b/platforma_dlya_naima/app/templates/candidate/recommendations.html
@@ -17,7 +17,7 @@
         }
     </style>
 
-    <title>SberКарьера</title>
+    <title>GigaКарьера</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}"/>
@@ -46,7 +46,7 @@
                 <a class="navbar-brand" href="..">
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt=""/>
                     <span>
-                SberКарьера
+                GigaКарьера
               </span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -135,7 +135,7 @@
                 <div class="info_logo">
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt=""/>
                     <span>
-              SberКарьера
+              GigaКарьера
             </span>
                 </div>
             </div>
