--- a/platforma_dlya_naima/app/templates/candidate/test.html
+++ b/platforma_dlya_naima/app/templates/candidate/test.html
@@ -21,7 +21,7 @@
         }
     </style>
 
-    <title>SberКарьера</title>
+    <title>GigaКарьера</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}"/>
@@ -42,7 +42,7 @@
                 <a class="navbar-brand" href="..">
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt=""/>
                     <span>
-                        SberКарьера
+                        GigaКарьера
                     </span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
