--- a/platforma_dlya_naima/app/templates/login.html
+++ b/platforma_dlya_naima/app/templates/login.html
@@ -12,7 +12,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
   
-    <title>SberКарьера</title>
+    <title>GigaКарьера</title>
   
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -33,7 +33,7 @@
                 <a class="navbar-brand" href="index.html">
                 <img src="images/logo.png" alt="" />
                 <span>
-                    SberКарьера
+                    GigaКарьера
                 </span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -142,7 +142,7 @@
             <div class="info_logo">
                 <img src="images/logo.png" alt="" />
                 <span>
-                SberКарьера
+                GigaКарьера
                 </span>
             </div>
             </div>
