--- a/platforma_dlya_naima/app/templates/create_test.html
+++ b/platforma_dlya_naima/app/templates/create_test.html
@@ -30,7 +30,7 @@
     <header class="header_section">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container">
-            <a class="navbar-brand" href=".">
+            <a class="navbar-brand" href="..">
               <img src="{{ url_for('static', filename='images/logo.png') }}" alt="" />
               <span>
                 GigaКарьера
@@ -262,7 +262,7 @@
                 </h5>
                 <ul>
                   <li class=" active">
-                    <a class="" href=".">Домой <span class="sr-only">(current)</span></a>
+                    <a class="" href="..">Домой <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="">
                     <a class="" href="hr">Для HR</a>
