--- a/platforma_dlya_naima/app/templates/hr.html
+++ b/platforma_dlya_naima/app/templates/hr.html
@@ -121,8 +121,8 @@
                     <!-- Поля для выбора темы и введения количества вопросов -->
                     <input id="themeInput" type="text" placeholder="Выберите тему">
                     <input id="questionCountInput" type="number" placeholder="Количество вопросов">
-                    <button onclick="createTest()">Создать тест</button>
-                    <button onclick="chooseTest()">Выбрать лучшие вопросы</button>
+                    <button onclick="createTest()">Сгенерировать тест</button>
+                    <button onclick="chooseTest()">Выбрать из существующих вопросов</button>
                   </div>
                 </div>
               </div>
