--- a/platforma_dlya_naima/app/templates/candidate/test.html
+++ b/platforma_dlya_naima/app/templates/candidate/test.html
@@ -21,7 +21,7 @@
         }
     </style>
 
-    <title>SberКарьера</title>
+    <title>GigaКарьера</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}"/>
@@ -42,7 +42,7 @@
                 <a class="navbar-brand" href="..">
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt=""/>
                     <span>
-                        SberКарьера
+                        GigaКарьера
                     </span>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -95,13 +95,18 @@
                     <form id="quizForm" method="POST" action="{{ url_for('submit_answers', test_id=test_id) }}">
                         <div class="tab_container" id="skills_tab_container">
                             <div id="availableTests" class="available-tests">
+
                                 {% for question, answer in questions.items() %}
                                     <div class="form-group">
-                                        <label for="{{ question }}">{{ question }}</label>
+                                        <label for="{{ question }}"><b>{{ question }}</b></label>
                                         <input type="text" class="form-control" id="{{ question }}"
                                                name="{{ question }}" required>
-                                        <button type="button" class="btn btn-success">+</button>
-                                        <button type="button" class="btn btn-danger">-</button>
+                                        <div>
+                                            <div>Оцените вопрос:</div>
+                                            <button type="button" class="btn btn-success">👍</button>
+                                            <button type="button" class="btn btn-danger">👎</button>
+                                        </div>
+
                                     </div>
                                 {% endfor %}
                             </div>
