--- a/platforma_dlya_naima/app/templates/candidate/select_test.html
+++ b/platforma_dlya_naima/app/templates/candidate/select_test.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="tab_container" id="skills_tab_container">
                         <div class="t-link-box">
-                            <div id="availableTests" class="available-tests">
+                            <div id="availableTests" class="available-tests" style="font-size: 28px">
                                 <!-- Courses will be displayed here -->
                             </div>
                         </div>
