--- a/platforma_dlya_naima/app/templates/candidate/test.html
+++ b/platforma_dlya_naima/app/templates/candidate/test.html
@@ -60,7 +60,7 @@
                             <a class="nav-link" href="hr">HR</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Кандидат</a>
+                            <a class="nav-link" href="../candidate">Кандидат</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about">О нас</a>
